# cost-minimization_ML

./: .gitignore  README.md  main.py  note.excalidraw  pyproject.toml  structure.py
config/: Xgboost.yaml  xgboost_tuning.yaml
notebooks/: EDA.ipynb
pipeline/: training_pipeline.py
src/: data_splitter.py  handle_missing_value.py  ingest_data.py  missing_value_imputation.py  model_building.py  model_evaluation.py  model_selection.py  tune_model.py
steps/: data_evaluator_steps.py  data_ingestion_steps.py  data_splitting_steps.py  missing_value_handling_steps.py  model_building_steps.py  model_selection_steps.py  model_tunning_steps.py  readme.md
