[project]
name = "predictive-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mlflow>=3.1.0",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.1",
    "zenml>=0.83.0",
]
